fixed some spacing with main page

--- a/main.css
+++ b/main.css
@@ -32,7 +32,7 @@ a {
   grid-row: span 6 / span 6;
   background-color: rgba(115, 126, 122, 0.541);
   width: 20vw;
-  height: 100vh;
+  height: 101vh;
 }
 .div2 {
   grid-column: span 2 / span 2;
